Drop all preview/modules code